# gen-zine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sample.env
.bundle/: config
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: jekyll.yml  main.yml
genzine/: README.md  logo.py  profile.py  utils.py
genzine/chains/: editorial.py  parsers.py  staff.py
genzine/editions/1/: README.md  run.py  zine_finished.json  zine_plan.json
genzine/editions/2/: run.py
genzine/models/: docs.py  editorial.py  staff.py
genzine/prompts/: editorial.py  staff.py
html/: Gemfile  Rakefile  _config.yml  index.html
html/_ai/: command-r.md  dall-e-3.md  gpt-3.5-turbo.md  open-mistral-7b.md
html/_authors/: claude3.md  gpt35turbo.md
html/_includes/: menu-header.html  staff-loop-card.html
html/_layouts/: about.html  ai.html  default.html  post.html  staff.html
html/_pages/: about.md  ai-list.html  author-gpt-3-5-turbo.html  privacy-policy.md  staff-list.html
html/_posts/: 2024-03-03-beyond_the_turing_test_the_quest_for_artificial_general_intelligence.md  2024-03-03-decoding_neural_networks_understanding_the_inner_workings_of_ai.md  2024-03-03-navigating_the_metaverse_exploring_virtual_worlds_in_the_age_of_ai.md  2024-03-03-the_evolution_of_ai_ethics_from_asimovs_laws_to_modern_dilemmas.md  2024-03-03-the_future_of_work_how_ai_is_reshaping_the_labor_market.md  2024-03-03-unleashing_creativity_how_ai_is_revolutionizing_the_arts.md  2024-03-09-dolor.md  2024-03-09-ipsum.md  2024-03-09-lorem.md
html/_posts/1-digital-minds-ai-chronicles/: 2024-03-03-beyond_the_turing_test_the_quest_for_artificial_general_intelligence.md  2024-03-03-decoding_neural_networks_understanding_the_inner_workings_of_ai.md  2024-03-03-navigating_the_metaverse_exploring_virtual_worlds_in_the_age_of_ai.md  2024-03-03-the_evolution_of_ai_ethics_from_asimovs_laws_to_modern_dilemmas.md  2024-03-03-the_future_of_work_how_ai_is_reshaping_the_labor_market.md  2024-03-03-unleashing_creativity_how_ai_is_revolutionizing_the_arts.md
html/_posts/2-earth-s-whispers-/: 2-earth-s-whispers-.yaml  2024-04-23-the-amazing-journey-of-the-monarch-butterfly-a-migratory-marvel.md.md  2024-04-23-the-extraordinary-life-and-adventures-of-the-desert-tortoise-a-silent-guardian-of-the-land.md.md  2024-04-23-the-secrets-of-the-ancient-saplings-a-deep-dive-into-the-mythology-and-medicinal-properties-of-the-world-s-oldest-trees.md.md
html/_site/: about.html  blog.html  feed.xml  index.html  sitemap.xml  staff.html
html/_site/2024/03/09/: dolor.html  ipsum.html  lorem.html
html/_site/authors/: claude3.html  gpt35turbo.html
html/_staff/: azura.md  dall-e-3.md  dalle3.md  gpt-3.5-turbo.md  gpt35turbo.md  luna.md  nora.md  seraphina.md  viper.md
infra/: website-stack.yml
src/editions/1/: run.py
src/models/: docs.py
test/: conftest.py  test_chains.py  test_models.py
